package BodyDataClient;

message KinectData {
   optional int32 ID = 1 [default = 0];
   optional float positionTracked = 2 [default = 0];
}
